<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <!-- Main Navigation Section -->
    <group android:checkableBehavior="single">

        <item
            android:id="@+id/nav_dashboard"
            android:icon="@drawable/dashboard"
            android:title="@string/dashboard" />

        <item
            android:id="@+id/nav_customers"
            android:icon="@drawable/customer"
            android:title="@string/customers" />

        <item
            android:id="@+id/nav_reports"
            android:icon="@drawable/reports"
            android:title="@string/reports" />

        <item
            android:id="@+id/nav_settings"
            android:icon="@drawable/setting"
            android:title="@string/settings" />
    </group>

    <!-- Account Section with Header -->
    <item android:title="Account">
        <menu>
            <group android:checkableBehavior="none">
                <item
                    android:id="@+id/nav_profile"
                    android:icon="@drawable/profile"
                    android:title="@string/profile" />

                <item
                    android:id="@+id/nav_logout"
                    android:icon="@drawable/ic_logout"
                    android:title="@string/logout" />
            </group>
        </menu>
    </item>

    <!-- More Options Section with Header -->
    <item android:title="More">
        <menu>
            <group android:checkableBehavior="none">
<!--                <item-->
<!--                    android:id="@+id/nav_share"-->
<!--                    android:icon="@drawable/ic_share"-->
<!--                    android:title="@string/share_app" />-->

<!--                <item-->
<!--                    android:id="@+id/nav_rate"-->
<!--                    android:icon="@drawable/ic_star"-->
<!--                    android:title="@string/rate_us" />-->

                <item
                    android:id="@+id/nav_about"
                    android:icon="@drawable/about"
                    android:title="@string/about" />
            </group>
        </menu>
    </item>
    <item android:title="Shop">
        <menu>

            <item
                android:id="@+id/nav_switchshop"
                android:title="Switch Shop"
                android:icon="@drawable/img_2" />

        </menu>
    </item>

</menu>